AC_INIT(include/mfs.h)
AM_CONFIG_HEADER(include/config.h:include/config.h.in)

AM_INIT_AUTOMAKE("MFSTools", 2.0)

AC_ARG_ENABLE(debug,
[  --enable-debug	Turn on debugging output],
[case "${enableval}" in
  yes) AC_DEFINE(DEBUG) ;;
  no)  : ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac])

AC_ARG_ENABLE(mfsadd,
[  --disable-mfsadd	Don't build mfsadd],
[case "${enableval}" in
  yes) build_mfsadd=true; AC_DEFINE(BUILD_MFSADD) ;;
  no)  build_mfsadd=false ;;
esac],[build_mfsadd=true; AC_DEFINE(BUILD_MFSADD)])
AM_CONDITIONAL(BUILD_MFSADD, test x$build_mfsadd = xtrue)
  
AC_ARG_ENABLE(mls,
[  --disable-mls	Don't build mls],
[case "${enableval}" in
  yes) build_mls=true; AC_DEFINE(BUILD_MLS) ;;
  no)  build_mls=false ;;
esac],[build_mls=true; AC_DEFINE(BUILD_MLS)])
AM_CONDITIONAL(BUILD_MLS, test x$build_mls = xtrue)
  
AC_ARG_ENABLE(mfsd,
[  --disable-mfsd	Don't build mfsd],
[case "${enableval}" in
  yes) build_mfsd=true; AC_DEFINE(BUILD_MFSD) ;;
  no)  build_mfsd=false ;;
esac],[build_mfsd=true; AC_DEFINE(BUILD_MFSD)])
AM_CONDITIONAL(BUILD_MFSD, test x$build_mfsd = xtrue)
  
AC_ARG_ENABLE(backup,
[  --disable-backup	Don't build backup],
[case "${enableval}" in
  yes) build_backup=true; AC_DEFINE(BUILD_BACKUP) ;;
  no)  build_backup=false ;;
esac],[build_backup=true; AC_DEFINE(BUILD_BACKUP)])
AM_CONDITIONAL(BUILD_BACKUP, test x$build_backup = xtrue)
  
AC_ARG_ENABLE(restore,
[  --disable-restore	Don't build restore],
[case "${enableval}" in
  yes) build_restore=true; AC_DEFINE(BUILD_RESTORE) ;;
  no)  build_restore=false ;;
esac],[build_restore=true; AC_DEFINE(BUILD_RESTORE)])
AM_CONDITIONAL(BUILD_RESTORE, test x$build_restore = xtrue)
  
AC_ARG_ENABLE(mfstool,
[  --disable-mfstool	Don't build mfstool mega-app],
[case "${enableval}" in
  yes) build_mfstool=true ;;
  no)  build_mfstool=false ;;
esac],[build_mfstool=true])
AM_CONDITIONAL(BUILD_MFSTOOL, test x$build_mfstool = xtrue)
  
AC_ARG_ENABLE(apps,
[  --disable-apps	Don't build standalone apps],
[case "${enableval}" in
  yes) build_apps=true ;;
  no)  build_apps=false ;;
esac],[build_apps=true])
AM_CONDITIONAL(BUILD_MFSAPPS, test x$build_apps = xtrue)
  
AC_PROG_CC
AC_PROG_MAKE_SET
AC_ARG_PROGRAM
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(asm/page.h)
AC_CHECK_HEADERS(asm/types.h)
AC_CHECK_HEADERS(ctype.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(linux/fs.h)
AC_CHECK_HEADERS(linux/ide-tivo.h)
AC_CHECK_HEADERS(linux/unistd.h)
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_HEADERS(netinet/in.h)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(sys/errno.h)
AC_CHECK_HEADERS(sys/ioctl.h)
AC_CHECK_HEADERS(sys/param.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(sys/types.h)
AC_CHECK_HEADERS(time.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(zlib.h)

AC_OUTPUT(
Makefile
lib/Makefile
mfsadd/Makefile
mls/Makefile
mfsd/Makefile
backup/Makefile
restore/Makefile
mfstool/Makefile
)
